--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -116,15 +116,15 @@ keymap = [
   # Tabs
   {on = [ "t" ], run = "tab_create --current", desc = "Create a new tab using the current path"},
 
-  {on = [ "1" ], run = "tab_switch 0", desc = "Switch to the first tab"},
-  {on = [ "2" ], run = "tab_switch 1", desc = "Switch to the second tab"},
-  {on = [ "3" ], run = "tab_switch 2", desc = "Switch to the third tab"},
-  {on = [ "4" ], run = "tab_switch 3", desc = "Switch to the fourth tab"},
-  {on = [ "5" ], run = "tab_switch 4", desc = "Switch to the fifth tab"},
-  {on = [ "6" ], run = "tab_switch 5", desc = "Switch to the sixth tab"},
-  {on = [ "7" ], run = "tab_switch 6", desc = "Switch to the seventh tab"},
-  {on = [ "8" ], run = "tab_switch 7", desc = "Switch to the eighth tab"},
-  {on = [ "9" ], run = "tab_switch 8", desc = "Switch to the ninth tab"},
+  # {on = [ "1" ], run = "tab_switch 0", desc = "Switch to the first tab"},
+  # {on = [ "2" ], run = "tab_switch 1", desc = "Switch to the second tab"},
+  # {on = [ "3" ], run = "tab_switch 2", desc = "Switch to the third tab"},
+  # {on = [ "4" ], run = "tab_switch 3", desc = "Switch to the fourth tab"},
+  # {on = [ "5" ], run = "tab_switch 4", desc = "Switch to the fifth tab"},
+  # {on = [ "6" ], run = "tab_switch 5", desc = "Switch to the sixth tab"},
+  # {on = [ "7" ], run = "tab_switch 6", desc = "Switch to the seventh tab"},
+  # {on = [ "8" ], run = "tab_switch 7", desc = "Switch to the eighth tab"},
+  # {on = [ "9" ], run = "tab_switch 8", desc = "Switch to the ninth tab"},
 
   {on = [ "[" ], run = "tab_switch -1 --relative", desc = "Switch to the previous tab"},
   {on = [ "]" ], run = "tab_switch 1 --relative", desc = "Switch to the next tab"},
@@ -156,6 +156,8 @@ prepend_keymap = [
   {on = [ "y" ], run = [ ''' shell 'fd -a "$1" | xclip  -selection clipboard' --confirm ''', "yank" ], desc = "Yank the selected files"},
   {on = [ "y" ], run = [ ''' shell 'fd -a "$1" | wl-copy' --confirm ''', "yank" ], desc = "Yank the selected files"},
   {on = [ "b", "g" ], run = [ ''' shell 'setbg "$1"' --confirm ''' ], desc = "Set the background image"},
+  # vidir
+  {on = "B", run = [ "escape --visual", "plugin --sync vidir" ], desc = "Bulk rename with vidir"},
   # chmod
   {on = [ "c", "m" ], run = "plugin chmod", desc = "Chmod on selected files"},
   # Archive
@@ -169,23 +171,29 @@ prepend_keymap = [
   # Dragon
   {on = [ "m", "a" ], run = ''' shell 'ripdrag -atk "$@"' --confirm ''', desc = "Drag and drop all"},
   {on = [ "m", "i" ], run = ''' shell 'ripdrag -tk "$@"' --confirm ''', desc = "Drag and drop individual"},
-  # vidir
-  {on = "B", run = 'vidir "$1"', desc = "Bulk rename"},
   # Max Preview
   {on = "T", run = "plugin --sync max-preview", desc = "Maximize or restore preview"},
   # Hide Preview
   {on = "<C-t>", run = "plugin --sync hide-preview", desc = "Hide or show preview"},
   # Relative motions
-  {on = [ "1" ], run = "plugin relative-motions -- 1", desc = "Move in relative steps"},
-  {on = [ "2" ], run = "plugin relative-motions -- 2", desc = "Move in relative steps"},
-  {on = [ "3" ], run = "plugin relative-motions -- 3", desc = "Move in relative steps"},
-  {on = [ "4" ], run = "plugin relative-motions -- 4", desc = "Move in relative steps"},
-  {on = [ "5" ], run = "plugin relative-motions -- 5", desc = "Move in relative steps"},
-  {on = [ "6" ], run = "plugin relative-motions -- 6", desc = "Move in relative steps"},
-  {on = [ "7" ], run = "plugin relative-motions -- 7", desc = "Move in relative steps"},
-  {on = [ "8" ], run = "plugin relative-motions -- 8", desc = "Move in relative steps"},
-  {on = [ "9" ], run = "plugin relative-motions -- 9", desc = "Move in relative steps"},
+  {on = [ "1" ], run = "plugin relative-motions 1", desc = "Move in relative steps"},
+  {on = [ "2" ], run = "plugin relative-motions 2", desc = "Move in relative steps"},
+  {on = [ "3" ], run = "plugin relative-motions 3", desc = "Move in relative steps"},
+  {on = [ "4" ], run = "plugin relative-motions 4", desc = "Move in relative steps"},
+  {on = [ "5" ], run = "plugin relative-motions 5", desc = "Move in relative steps"},
+  {on = [ "6" ], run = "plugin relative-motions 6", desc = "Move in relative steps"},
+  {on = [ "7" ], run = "plugin relative-motions 7", desc = "Move in relative steps"},
+  {on = [ "8" ], run = "plugin relative-motions 8", desc = "Move in relative steps"},
+  {on = [ "9" ], run = "plugin relative-motions 9", desc = "Move in relative steps"},
   {on = [ "c", "s" ], run = "plugin what-size", desc = "Calc size of selection or cwd"},
+  {on = "M", run = "plugin mount", desc = "Mount"},
+  {on = "F", run = "plugin smart-filter", desc = "Smart filter"},
+  {on = "<C-d>", run = "plugin diff", desc = "Diff the selected with the hovered file"},
+  {on = [ "<C-e>" ], run = "seek 5"},
+  {on = [ "<C-y>" ], run = "seek -5"},
+  {on = [ "z", "h" ], run = "plugin time-travel --args=prev", desc = "Go to previous snapshot"},
+  {on = [ "z", "l" ], run = "plugin time-travel --args=next", desc = "Go to next snapshot"},
+  {on = [ "z", "e" ], run = "plugin time-travel --args=exit", desc = "Exit browsing snapshots"},
 ]
 
 [tasks]
