--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ monitor=HDMI-A-1,prefered,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = {{terminal}}
 $fileManager = $terminal -e yazi
 $menu = wofi --show drun -ib
 $browser = floorp
