--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -3,6 +3,8 @@ set -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ",Alacritty*:Tc"
 set-option -sa terminal-overrides ",alacritty*:Tc"
 set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -sa terminal-overrides ",Ghostty*:Tc"
+set-option -sa terminal-overrides ",ghostty*:Tc"
 
 set-option -g status-position top
 set-option -sg escape-time 0
