--- a/config/yazi/package.toml
+++ b/config/yazi/package.toml
@@ -1,22 +1,7 @@
 [[plugin.deps]]
-use = "AnirudhG07/nbpreview"
-rev = "bc573d5"
-hash = "ab61298c387a63e781a87129f533883b"
-
-[[plugin.deps]]
-use = "Reledia/glow"
-rev = "2da96e3"
-hash = "f9ee1436e3b853508d87f7d49dce56e6"
-
-[[plugin.deps]]
 use = "Reledia/hexyl"
 rev = "016a09b"
 hash = "50da29476e744dba37d77fb209328fd1"
-
-[[plugin.deps]]
-use = "Sonico98/exifaudio"
-rev = "7ff7141"
-hash = "666ccba55119fba4c25b8ad354b2855c"
 
 [[plugin.deps]]
 use = "dedukun/relative-motions"
@@ -27,11 +12,6 @@ hash = "23915860e59348bf4166778bb0e606f7"
 use = "hankertrix/augment-command"
 rev = "91ba6c5"
 hash = "6ac13898ec80c623e2d9ea90b947c86a"
-
-[[plugin.deps]]
-use = "imsi32/yatline"
-rev = "2ecf715"
-hash = "38e2ea4703ea606d4eef574e8e8b8fd7"
 
 [[plugin.deps]]
 use = "kirasok/torrent-preview"
@@ -50,18 +30,68 @@ hash = "6e789212eb41d937bab04877ca361099"
 
 [[plugin.deps]]
 use = "yazi-rs/plugins:git"
-rev = "4b027c7"
+rev = "864a021"
 hash = "e0ada736ea676c2bbb3ec705a49526ef"
 
 [[plugin.deps]]
 use = "yazi-rs/plugins:chmod"
-rev = "4b027c7"
+rev = "864a021"
 hash = "2f1053f89d1a301a648ab181d0948e38"
 
 [[plugin.deps]]
 use = "yazi-rs/plugins:full-border"
-rev = "4b027c7"
+rev = "864a021"
 hash = "1f3dad061209081a6b04dd6ff2cb06c7"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:mount"
+rev = "864a021"
+hash = "dd97eede8e20e59cd2604e8006e470e2"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:smart-filter"
+rev = "864a021"
+hash = "f0c4b41b5d19a3144958383333eff6e7"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:mime-ext"
+rev = "864a021"
+hash = "5e24c167e9ae9a203a48f2a438b8c705"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:diff"
+rev = "864a021"
+hash = "7a08e303167d5b655c06da6d570f0333"
+
+[[plugin.deps]]
+use = "AnirudhG07/rich-preview"
+rev = "fdcf373"
+hash = "bd1737dd44b202f412122e6a3b378d4c"
+
+[[plugin.deps]]
+use = "macydnah/office"
+rev = "d1e3e51"
+hash = "35241f7d85abc5a0d2441020bc597ceb"
+
+[[plugin.deps]]
+use = "boydaihungst/mediainfo"
+rev = "9629b1e"
+hash = "5204b4e2bd238c40fa66cf0a0191f084"
+
+[[plugin.deps]]
+use = "iynaix/time-travel"
+rev = "7e0179e"
+hash = "69967963fba96295a07b68354fc91ea9"
+
+[[plugin.deps]]
+use = "imsi32/yatline"
+rev = "2ecf715"
+hash = "38e2ea4703ea606d4eef574e8e8b8fd7"
+
+[[plugin.deps]]
+use = "kristoferssolo/vidir"
+rev = "54ef22b"
+hash = "e3fe41820f43c3511be9846cc7bdf638"
 
 [flavor]
 deps = []
