--- a/config/yazi/keymap.toml
+++ b/config/yazi/keymap.toml
@@ -3,7 +3,6 @@
 "$schema" = "https://yazi-rs.github.io/schemas/keymap.json"
 
 [manager]
-
 keymap = [
   {on = [ "<Esc>" ], run = "escape", desc = "Exit visual mode, clear selected, or cancel search"},
   {on = [ "<C-[>" ], run = "escape", desc = "Exit visual mode, clear selected, or cancel search"},
@@ -153,8 +152,8 @@ keymap = [
 ]
 prepend_keymap = [
   # Custom
-  {on = [ "y" ], run = [ ''' shell 'fd -a "$1" | xclip  -selection clipboard' --confirm ''', "yank" ], desc = "Yank the selected files"},
-  {on = [ "y" ], run = [ ''' shell 'fd -a "$1" | wl-copy' --confirm ''', "yank" ], desc = "Yank the selected files"},
+  {on = [ "y" ], run = [ 'shell -- echo "$@" | xclip -selection clipboard', "yank" ], desc = "Yank the selected files"},
+  {on = [ "y" ], run = [ 'shell -- for path in "$@"; do echo "file://$path"; done | wl-copy -t text/uri-list', "yank" ], desc = "Yank the selected files"},
   {on = [ "b", "g" ], run = [ ''' shell 'setbg "$1"' --confirm ''' ], desc = "Set the background image"},
   # vidir
   {on = "B", run = [ "escape --visual", "plugin --sync vidir" ], desc = "Bulk rename with vidir"},
@@ -169,8 +168,8 @@ prepend_keymap = [
   {on = [ "R" ], run = "plugin augment-command -- rename", desc = "Rename a file or directory"},
   {on = [ "D" ], run = "plugin augment-command -- remove --permanently", desc = "Permanently delete the files"},
   # Dragon
-  {on = [ "m", "a" ], run = ''' shell 'ripdrag -atk "$@"' --confirm ''', desc = "Drag and drop all"},
-  {on = [ "m", "i" ], run = ''' shell 'ripdrag -tk "$@"' --confirm ''', desc = "Drag and drop individual"},
+  {on = [ "m", "m" ], run = 'shell -- ripdrag -atk "$@"', desc = "Drag and drop all"},
+  {on = "<C-n>", run = 'shell -- ripdrag -atk "$@"', desc = "Drag and drop all"},
   # Max Preview
   {on = "T", run = "plugin --sync max-preview", desc = "Maximize or restore preview"},
   # Hide Preview
